--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-    <canvas id="gameCanvas" width="800" height="300"></canvas>
+
+    <canvas id="gameCanvas" width="800" height="600">
+
+    </canvas>
     <script src="script.js"></script>
     <h1
         style=" text-align:  center; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: 30px;">
         score <span id="sco">0</span></h1>
+    <P class="" style=" text-align: center ">This dino game developed by kiron</P>
 </body>
 
 </html>
