--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="jump">
 
     <canvas id="gameCanvas" width="800" height="300">
 
